--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,13 @@
     </header>
 
     <main>
+        <div id="Con">
+            <div id="Con2">
         {% block content %}
         <!-- Page-specific content will go here -->
         {% endblock %}
+            </div>
+        </div>
     </main>
 
     <footer>
