--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,15 @@
         {% block content %}
         <!-- Page-specific content will go here -->
         {% endblock %}
+            {% with messages = get_flashed_messages()%}
+            {% if messages%}
+                {% for message in messages%}
+                <br>
+                <p>{{message}}</p>
+                {%endfor%}
+            {%endif%}
+            {%endwith%}
+            {% endblock %}
             </div>
         </div>
     </main>
