--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -6,13 +6,13 @@
 <h2>Sign Up</h2>
 <form method="post" action="/signup">
     <label>Username:</label>
-    <input name="Username" />
+    <input name="username" />
     <br>
     <label id="l5">Password:</label>
-    <input name="Password" />
+    <input name="password" />
     <br>
     <label id="l6">Email:</label>
-    <input name="Email" />
+    <input name="email" />
     <br>
     <button type="submit">Submit</button>
 </form>
