Fixing small errors

--- a/auth/templates/auth/login.html
+++ b/auth/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login - My Website{% endblock %}
+{% block title %}Login - LitLounge{% endblock %}
 
 {% block content %}
 <h2>Login</h2>
