--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}Login - My Website{% endblock %}
+{% block title %}Login - LitLounge{% endblock %}
 
 {% block content %}
 <h2>Sign Up</h2>
 <form method="post" action="/signup">
     <label>Username:</label>
-    <input name="username" />
+    <input type="text" name="username" required>
     <br>
     <label id="l5">Password:</label>
-    <input name="password" />
+    <input type="password" name="password" required>
     <br>
     <label id="l6">Email:</label>
-    <input name="email" />
+    <input type="text" name="email" required>
     <br>
     <button type="submit">Submit</button>
 </form>
