--- a/auth/templates/auth/login.html
+++ b/auth/templates/auth/login.html
@@ -4,12 +4,10 @@
 
 {% block content %}
 <h2>Login</h2>
-<form method="POST">
-    <label>Username:</label>
-    <input type="text" name="username" required>
+<form method="POST" action="/login">
+    <input type="text" placeholder="Username" name="username" required>
     <br>
-    <label id="l3">Password:</label>
-    <input type="password" name="password" required>
+    <input type="password" placeholder="Password" name="password" required>
     <br>
     <button type="submit">Login</button>
 </form>
