--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -4,15 +4,12 @@
 
 {% block content %}
 <h2>Sign Up</h2>
-<form method="post" action="/signup">
-    <label>Username:</label>
-    <input type="text" name="username" required>
+<form method="POST" action="/signup">
+    <input type="text" placeholder="Username" name="username" required>
     <br>
-    <label id="l5">Password:</label>
-    <input type="password" name="password" required>
+    <input type="password" placeholder="Password" name="password" required>
     <br>
-    <label id="l6">Email:</label>
-    <input type="text" name="email" required>
+    <input type="text" placeholder="Email" name="email" required>
     <br>
     <button type="submit">Submit</button>
 </form>
