--- a/gen/templates/gen/home.html
+++ b/gen/templates/gen/home.html
@@ -1,15 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Login - My Website{% endblock %}
+{% block title %}Home - LitLounge{% endblock %}
 
 {% block content %}
 <h2>Login</h2>
-<form method="POST">
-    <label>Username:</label>
-    <input type="text" name="username" required>
-    <br>
-    <label id="l3">Password:</label>
-    <input type="password" name="password" required>
+<form method="POST" action="/home">
+    <input type="text" placeholder="Username" name="username" required>
     <br>
     <button type="submit">Login</button>
 </form>
