--- a/gen/templates/gen/home.html
+++ b/gen/templates/gen/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Login</h2>
 <form method="POST" action="/home">
-    <input type="text" placeholder="Username" name="username" required>
+    <input type="text" placeholder="Search LitLounge" name="username" required>
     <br>
     <button type="submit">Login</button>
 </form>
