--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,16 @@
 </head>
 <body>
     <header>
-        <h1>LitLounge</h1>
-        {% if current_user.is_authenticated %}
-            <p>Logged in as {{ current_user.username }}</p>
-            <a href="{{ url_for('auth.logout') }}">Logout</a>
-        {% else %}
-            <a href="{{ url_for('auth.login') }}">Login</a> |
-            <a href="{{ url_for('auth.signup') }}">Sign Up</a>
-        {% endif %}
+        <ul>
+            <li><h1>LitLounge</h1></li>
+            {% if current_user.is_authenticated %}
+                <li><p>Logged in as {{ current_user.username }}</p></li>
+                <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+            {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                <li><a href="{{ url_for('auth.signup') }}">Sign Up</a></li>
+            {% endif %}
+        </ul>
         <hr>
     </header>
 
