--- a/static/main.css
+++ b/static/main.css
@@ -33,6 +33,14 @@ li h1 {
     text-decoration: none;
 }
 
+li p {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
 li a {
     display: block;
     color: white;
