--- a/gen/templates/gen/home.html
+++ b/gen/templates/gen/home.html
@@ -3,10 +3,10 @@
 {% block title %}Home - LitLounge{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
+<h2>Search</h2>
 <form method="POST" action="/home">
     <input type="text" placeholder="Search LitLounge" name="username" required>
     <br>
-    <button type="submit">Login</button>
+    <button type="submit">Search</button>
 </form>
 {% endblock %}
