--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <ul>
             <li><h1>LitLounge</h1></li>
             {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('gen.home') }}">Home</a></li>
                 <li><p>Logged in as {{ current_user.username }}</p></li>
                 <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
             {% else %}
