--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,9 @@
 
     <footer>
         <hr>
-        <p>&copy; 2025 LitLounge</p>
+        <ul>
+            <li><p>&copy; 2025 LitLounge</p></li>
+        </ul>
     </footer>
 </body>
 </html>
