--- a/auth/templates/auth/login.html
+++ b/auth/templates/auth/login.html
@@ -9,6 +9,6 @@
     <br>
     <input type="password" placeholder="Password" name="password" required>
     <br>
-    <button type="submit">Login</button>
+    <button type="submit">Sign in</button>
 </form>
 {% endblock %}
