--- a/static/main.css
+++ b/static/main.css
@@ -54,7 +54,16 @@ li a:hover {
 }
   
 input { 
+    border-radius: 4px;
+    border-color: black;
+    padding-left: 2px;
     margin-bottom: 10px;
+}
+
+button {
+    border-radius: 4px;
+    padding: 3px;
+    background-color: rgb(118, 157, 255);
 }
   
 #Con {
