--- a/gen/templates/gen/home.html
+++ b/gen/templates/gen/home.html
@@ -5,8 +5,9 @@
 {% block content %}
 <h2>Search</h2>
 <form method="POST" action="/home">
-    <input type="text" placeholder="Search LitLounge" name="username" required>
+    <input type="text" placeholder="Search LitLounge" name="search" required>
     <br>
     <button type="submit">Search</button>
 </form>
+<p>{{ result }}</p>
 {% endblock %}
