--- a/gen/templates/gen/search.html
+++ b/gen/templates/gen/search.html
@@ -4,10 +4,14 @@
 
 {% block content %}
 <h2>Search</h2>
-<form method="POST" action="/home">
+<form method="POST" action="/search">
     <input type="text" placeholder="Search LitLounge" name="search" required>
     <br>
     <button type="submit">Search</button>
 </form>
-<p>{{ result }}</p>
+
+<form method="POST" action="/movie">
+    <br>
+    <button type="submit">{{ result }}</button>
+</form>
 {% endblock %}
