--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
             <li><img src="{{ url_for('static', filename='Logo.png') }}" width="50" height="40"></li>
             <li><h1>LitLounge</h1></li>
             {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('gen.home') }}">Home</a></li>
+                <li><a href="{{ url_for('gen.search') }}">Home</a></li>
                 <li><p>Logged in as {{ current_user.username }}</p></li>
                 <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
             {% else %}
