--- a/static/main.css
+++ b/static/main.css
@@ -65,6 +65,19 @@ button {
     padding: 3px;
     background-color: rgb(118, 157, 255);
 }
+
+#inline-block-child {
+    display: inline-block;
+}
+
+#blurb {
+    margin-right: 10px;
+    padding: 0.5em;
+    border-style:solid;
+    border-color: #111;
+    float: left;
+    width: 400px;
+}
   
 #Con {
     display: flex;
