--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -11,4 +11,7 @@
 <br>
 <p id="blurb">{{ book.blurb }}</p>
 <img id="inline-block-child" src="{{ book.cover_link }}" height="400" width="267">
+<br>
+<br>
+<h2>Reviews</h2>
 {% endblock %}
