--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login - LitLounge{% endblock %}
+{% block title %}Signup - LitLounge{% endblock %}
 
 {% block content %}
 <h2>Sign Up</h2>
