--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -7,11 +7,9 @@
 <p id="inline-block-child">By {{ book.author }} |</p>
 <p id="inline-block-child">Genre: {{ book.genre }} |</p>
 <p id="inline-block-child">Publishing date: {{ book.publishing_date }}</p>
-<br>
-<br>
-<p id="blurb">{{ book.blurb }}</p>
-<img id="inline-block-child" src="{{ book.cover_link }}" height="400" width="267">
-<br>
-<br>
+<div id="middle">
+    <p id="blurb">{{ book.blurb }}</p>
+    <img id="inline-block-child" src="{{ book.cover_link }}" height="400" width="267">
+</div>
 <h2>Reviews</h2>
 {% endblock %}
