Issue with reviews

--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -25,7 +25,7 @@
     {% endif %}
 {% endfor %}
 <form method="POST" action="/review">
-    <textarea name="review">
+    <textarea name="review"></textarea>
     <br>
     <button type="submit">Make a review</button>
 </form>
