--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -19,7 +19,7 @@
                 <br>
                 <h2>{{ review.title }}</h2>
                 <br>
-                <p>{{ user.username }} | {{ review.publishing_date }}</p>
+                <p>By {{ user.username }} | {{ review.publishing_date }}</p>
                 <br>
                 <p>{{ review.text }}</p>
                 <br>
