Review styling done

--- a/gen/templates/gen/search.html
+++ b/gen/templates/gen/search.html
@@ -10,7 +10,7 @@
     <button type="submit">Search</button>
 </form>
 
-<form method="POST" action="/movie">
+<form method="POST" action="/book">
     <br>
     <button type="submit">{{ result }}</button>
 </form>
