--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -4,12 +4,14 @@
 
 {% block content %}
 <h2>Sign Up</h2>
-<form method="POST" action="/signup">
+<form method="POST" action="/signup" enctype="multipart/form-data">
     <input type="text" placeholder="Username" name="username" required>
     <br>
     <input type="password" placeholder="Password" name="password" required>
     <br>
     <input type="text" placeholder="Email" name="email" required>
+    <br>
+    <input type="file" name="image" required>
     <br>
     <button type="submit">Submit</button>
 </form>
