--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <li><h1>LitLounge</h1></li>
             {% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('gen.search') }}">Home</a></li>
-                <li><p>Logged in as {{ current_user.username }}</p></li>
+                <li><p>{{ current_user.username }}</p></li>
                 <li><img src="{{ url_for('static', filename=current_user.profile_picture) }}" width="50" height="40"></li>
                 <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
             {% else %}
