--- a/static/main.css
+++ b/static/main.css
@@ -81,6 +81,11 @@ textarea {
     display: inline-block;
 }
 
+#inline-block-child2 {
+    margin-right: 5px;
+    display: inline-block;
+}
+
 #blurb {
     margin-right: 10px;
     padding: 0.5em;
