--- a/auth/templates/auth/login.html
+++ b/auth/templates/auth/login.html
@@ -11,4 +11,7 @@
     <br>
     <button type="submit">Sign in</button>
 </form>
+<div id="signupButton2">
+    <a id="signupButton" href="{{ url_for('auth.signup') }}">Don't have an account click here!</a>
+</div>
 {% endblock %}
