--- a/gen/templates/gen/search.html
+++ b/gen/templates/gen/search.html
@@ -10,8 +10,11 @@
     <button type="submit">Search</button>
 </form>
 
+<br>
+<h3>Search results:</h3>
+<br>
+
 <form method="POST" action="/book">
-    <br>
     <button type="submit">{{ result }}</button>
 </form>
 {% endblock %}
