--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -23,6 +23,11 @@
                 <li><p id="inline-block-child">By {{ user.username }}</p></li>
                 <li><img id="inline-block-child2" src="{{ url_for('static', filename=user.profile_picture) }}" width="50" height="40"></li>
                 <li><p id="inline-block-child">{{ review.publishing_date }}</p></li>
+                {% for i in range(0, review.rating|int|round(1)) %}
+                    <svg width="23" height="25">
+                        <polygon points="12.5, 1.25 5.0, 24.75 23.75, 9.75 1.25, 9.75 20.0, 24.75"/>
+                    </svg>
+                {%endfor%}
                 </ul>
                 <br>
                 <br>
@@ -34,6 +39,7 @@
 {% endfor %}
 <form method="POST" action="/review">
     <input type="text" placeholder="Title" name="title" required>
+    <input type="range" name="rating" min="0.5" max="5" step="0.5" value="5" class="rating" style="--val:5" oninput="this.style='--val:'+this.value" required>
     <br>
     <textarea name="review" required></textarea>
     <br>
