--- a/static/main.css
+++ b/static/main.css
@@ -88,6 +88,15 @@ svg {
     padding-top: 7px;
 }
 
+#preview {
+   /*display: inline-block;*/
+   object-fit: cover; 
+}
+
+#imagePicker {
+    display: none;
+}
+
 #yellowStar {
     fill:#fbff00;
 }
@@ -118,6 +127,7 @@ svg {
 }
 
 #fileButton {
+    /*display: inline-block;*/
     border-radius: 4px;
     border-color: black;
     border-style: solid;
@@ -137,7 +147,7 @@ svg {
 }
 
 #fileButton2 {
-    margin-top: 10px;
+    margin: 0px;
 }
 
 #signupButton2 {
