cursor: pointer; change

--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -11,7 +11,7 @@
     <br>
     <input type="text" placeholder="Email" name="email" required>
     <br>
-    <div id="fileButton2">
+    <div id="fileButton2" role="button">
         <label for="imagePicker" id="fileButton">Image for profile picture</label>
         <input onchange="loadFile(event)" type="file" id="imagePicker" accept="image/*" name="imagePicker" required>
         <img id="preview" width="50" height="40"/>
