--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -17,6 +17,12 @@
     {% if book.id == review.bookID %}
         {% for user in users %}
             {% if user.id == review.userID %}
+                {% for like in likes %}
+                    {% if review.id == like.reviewID %}
+                        likeCount = likeCount + like.like|int
+                        dislikeCount = dislikeCount + like.dislike|int
+                    {% endif %}
+                {% endfor %}
                 <br>
                 <h2>{{ review.title }}</h2>
                 <ul>
@@ -51,11 +57,11 @@
                 <br>
                 <form method="POST" action="/like">
                     <input type="hidden" name="reviewID" value="{{ review.id }}">
-                    <button type="submit" id="like">👍</button>
+                    <button type="submit" id="like">👍{{ likeCount }}</button>
                 </form>
                 <form method="POST" action="/dislike">
                     <input type="hidden" name="reviewID" value="{{ review.id }}">
-                    <button type="submit">👎</button>
+                    <button type="submit">👎{{ dislikeCount }}</button>
                 </form>
             {% endif %}
         {% endfor %}
