Bio and duplicate error code added

--- a/auth/templates/auth/signup.html
+++ b/auth/templates/auth/signup.html
@@ -17,6 +17,8 @@
         <img id="preview" width="50" height="40"/>
     </div>
     <br>
+    <textarea name="bio" required></textarea>
+    <br>
     <button type="submit">Submit</button>
 </form>
 {% endblock %}
