Adding a profile page

--- a/gen/templates/gen/book.html
+++ b/gen/templates/gen/book.html
@@ -22,7 +22,10 @@
                 <br>
                 <h2>{{ review.title }}</h2>
                 <ul>
-                <li><p id="inline-block-child">By {{ user.username }}</p></li>
+                <form method="POST" action="/profile">
+                    <input type="hidden" name="user" value="{{ user.username }}">
+                    <li><button type="subimt" id="profileButton">By {{ user.username }}</a></li>
+                </form>
                 <li><img id="inline-block-child2" src="{{ url_for('static', filename=user.profile_picture) }}" width="50" height="40"></li>
                 <li><p id="inline-block-child">{{ review.publishing_date }}</p></li>
                 {% for i in range(0, review.rating|int) %}
