--- a/static/main.css
+++ b/static/main.css
@@ -168,6 +168,28 @@ svg {
     margin-bottom: 20px;
 }
 
+#profileButton {
+    display: inline-block;
+    cursor: pointer;
+    display: block;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 0;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#profileButton:hover {
+    background-color: #c4c4c4;
+}
+
+#profileButton:active {
+    background-color: rgb(75, 75, 75);
+    color: white;
+}
+
 #inline-block-child {
     display: inline-block;
 }
