--- a/gen/templates/gen/profile.html
+++ b/gen/templates/gen/profile.html
@@ -3,5 +3,6 @@
 {% block title %}Home - LitLounge{% endblock %}
 
 {% block content %}
-<h2>Test</h2>
+<img src="{{ url_for('static', filename=user.profile_picture) }}" width="50" height="40">
+<h2>{{ user.username }}</h2>
 {% endblock %}
