--- a/gen/templates/gen/profile.html
+++ b/gen/templates/gen/profile.html
@@ -3,6 +3,7 @@
 {% block title %}Home - LitLounge{% endblock %}
 
 {% block content %}
-<img src="{{ url_for('static', filename=user.profile_picture) }}" width="50" height="40">
+<img id="profile_picture" src="{{ url_for('static', filename=user.profile_picture) }}" width="100" height="80">
 <h2>{{ user.username }}</h2>
+<p>{{ user.bio }}</p>
 {% endblock %}
