--- a/static/main.css
+++ b/static/main.css
@@ -202,6 +202,8 @@ svg {
 
 #profile_picture {
     object-fit: cover;
+    border: 2px solid rgb(69, 68, 68);
+    border-radius: 5px;
 }
 
 #blurb {
