--- a/gen/templates/gen/profile.html
+++ b/gen/templates/gen/profile.html
@@ -3,7 +3,11 @@
 {% block title %}Home - LitLounge{% endblock %}
 
 {% block content %}
-<img id="profile_picture" src="{{ url_for('static', filename=user.profile_picture) }}" width="100" height="80">
-<h2>{{ user.username }}</h2>
-<p>{{ user.bio }}</p>
+{% set link = "static/" + user.profile_picture %}
+    <form method="POST" action="/picture" enctype="multipart/form-data">
+        <input onchange="loadFile(event)" type="file" type="hidden" id="imagePicker" accept="image/*" name="imagePicker" required>
+        <input type="image" id="profile_picture2" src="{{ link }}" alt="Submit">
+    </form>
+    <h2>{{ user.username }}</h2>
+    <p>{{ user.bio }}</p>
 {% endblock %}
